Added deletion functionality
Deletion logic added to the grocery service deletes and removes the item from the list.

--- a/app/pages/list/list-common.css
+++ b/app/pages/list/list-common.css
@@ -32,3 +32,10 @@ ListView {
     opacity: 1;
   }
 }
+
+.delete-container {
+  background-color: #CB1D00;
+  padding: 5;
+  height: 20;
+  margin-right: 8;
+}
